# phu-beat-sync-multi-scope

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
.github/agents/: JuceAudioFeature.agent.md  JuceAudioFeaturePlanner.agent.md  JuceAudioResearcher.agent.md  JuceAudioReviewer.agent.md  JuceAudioTester.agent.md
.github/instructions/: audio-thread-safety.instructions.md
.github/workflows/: build.yml  release.yml
doc/: signal-path-analysis.md
lib/: CMakeLists.txt  LinkwitzRileyFilter.h  StringUtil.h
lib/audio/: AudioSampleFifo.h  AudioSampleRingBuffer.h  BeatSyncBuffer.h  BucketSet.h  RawSampleBuffer.h
lib/debug/: DebugLogEventQueue.h  DebugLogSink.h  EditorLogger.cpp  EditorLogger.h
lib/gl/: CMakeLists.txt  GLRendererBase.h  GLSLShaderBuilder.cpp  GLSLShaderBuilder.h  GLSnapshotRenderer.h
lib/network/: CtrlBroadcaster.cpp  CtrlBroadcaster.h  MulticastBroadcasterBase.cpp  MulticastBroadcasterBase.h  SampleBroadcaster.cpp  SampleBroadcaster.h
scripts/: install-linux-deps.sh
src/: CMakeLists.txt  DebugLogPanel.cpp  DebugLogPanel.h  DisplayFilterStrip.cpp  DisplayFilterStrip.h  OpenGLScopeRenderer.cpp  OpenGLScopeRenderer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RemoteChannelChooser.cpp  RemoteChannelChooser.h  ScopeDisplay.cpp  ScopeDisplay.h
src/gl/: CancellationOverlayRenderer.cpp  CancellationOverlayRenderer.h  GridPlayheadGLRenderer.cpp  GridPlayheadGLRenderer.h  OpenGLScopeRenderer.cpp  OpenGLScopeRenderer.h  RmsOverlayRenderer.cpp  RmsOverlayRenderer.h  ScopeGLCoordinator.cpp  ScopeGLCoordinator.h  WaveformGLRenderer.cpp  WaveformGLRenderer.h
tests/: CMakeLists.txt  test_audio_buffers.cpp
